--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@brightdata/sdk": "^0.2.0",
     "axios": "^1.13.1",
     "cheerio": "^1.1.2",
+    "diff": "^8.0.2",
     "dotenv": "^17.2.3",
     "fs": "^0.0.1-security",
     "mongodb": "^7.0.0",
